[workspace]
resolver = "2"
members = [ "ipa-step", "ipa-step-derive", "ipa-core", "ipa-macros" , "ipa-step-test"]

[profile.release]
incremental = true
lto = "thin"

[profile.release-max]
inherits = "release"
codegen-units = 1

[profile.bench-dhat]
inherits = "bench"
incremental = true
lto = "thin"
debug = 1
