[workspace]
resolver = "2"
members = ["ipa-core", "ipa-step", "ipa-step-derive", "ipa-step-test", "ipa-metrics", "ipa-metrics-tracing"]

[profile.release]
incremental = true
lto = "thin"
# The reason for this is that we are moving towards the direction when helper processes are created per query
# in this case there is no reason to try and preserve the helper instance to serve other queries. Aborting
# makes dealing with the corrupted state easier
panic = 'abort'


[profile.release-max]
inherits = "release"
codegen-units = 1

[profile.bench-dhat]
inherits = "bench"
incremental = true
lto = "thin"
debug = 1
