[package]
name = "helper"
version = "0.1.0"
rust-version = "1.64.0"
edition = "2021"

[features]
default = ["web-app", "cli"]
web-app = ["hyper", "hyper-tls", "sec1", "time"]
cli = ["clap", "comfy-table"]
test-fixture = []

[dependencies]
ipa = { version = "*", path = "../ipa", features = ["real-world-infra"] }
clap = { version = "4.0", optional = true, features = ["derive"] }
comfy-table = { version = "7.0", optional = true }
hyper = { version = "0.14.26", optional = true, features = ["client", "h2", "stream"] }
hyper-tls = { version = "0.5.0", optional = true }
# TODO(640): sec1 only needed until we standardize on rustls
sec1 = { version = "0.7", features = ["alloc", "pem", "pkcs8"], optional = true }
time = { version = "0.3", optional = true }
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.37"
generic-array = "0.14.7"
rand = "0.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"

[dev-dependencies]
command-fds = "0.2.2"
tempfile = "3"

[[bin]]
name = "test_mpc"
required-features = ["web-app", "test-fixture"]
bench = false

[[test]]
name = "helper_networks"
required-features = ["web-app", "test-fixture"]
