[package]
name = "ipa-core"
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"

[features]
default = [
    "web-app",
    "in-memory-infra",
    # by default remove all TRACE, DEBUG spans from release builds
    "tracing/max_level_trace",
    "tracing/release_max_level_info",
    "descriptive-gate",
    "aggregate-circuit",
    "stall-detection",
    "aggregate-circuit",
    "ipa-prf",
]
cli = ["comfy-table", "clap"]
disable-metrics = []
# TODO move web-app to a separate crate. It adds a lot of build time to people who mostly write protocols
# TODO Consider moving out benches as well
web-app = [
    "axum",
    "axum-server",
    "base64",
    "clap",
    "comfy-table",
    "hyper",
    "hyper-rustls",
    "rcgen",
    "rustls",
    "rustls-pemfile",
    "time",
    "tokio-rustls",
    "toml",
    "tower",
    "tower-http",
]
test-fixture = ["weak-field"]
# Include observability instruments that detect lack of progress inside MPC. If there is a bug that leads to helper
# miscommunication, this feature helps to detect it. Turning it on has some cost.
# If "shuttle" feature is enabled, turning this on has no effect.
stall-detection = []
shuttle = ["shuttle-crate", "test-fixture"]
debug-trace = ["tracing/max_level_trace", "tracing/release_max_level_debug"]
# TODO: we may want to use in-memory-bench and real-world-bench some time after
enable-benches = ["cli", "in-memory-infra", "test-fixture", "criterion", "iai"]
# The following two features are mutually exclusive. In-memory should be enabled by default as the vast majority
# of unit tests use it. Real world infra uses HTTP implementation and is suitable for integration/e2e tests
in-memory-infra = []
real-world-infra = []
dhat-heap = ["cli", "test-fixture"]
# Enable this feature to enable our colossally weak Fp31.
weak-field = []
step-trace = ["descriptive-gate"]
# The following two features are mutually exclusive. Descriptive should be enabled by deafult as the vast majority
# of unit tests use it. Compact uses memory-efficient gates and is suitable for production.
descriptive-gate = []
compact-gate = ["ipa-macros/compact-gate"]
# Enable using more than one thread for protocol execution. Most of the parallelism occurs at parallel/seq_join operations
multi-threading = ["async-scoped"]
# Enable tokio task profiling. Requires tokio_unstable flag to be passed to the compiler.
# RUSTFLAGS="--cfg tokio_unstable" cargo run ... --features="tokio-console ...".
# Note that if there are other flags enabled on your platform in .cargo/config.toml, you need to include them as well.
tokio-console = ["console-subscriber", "tokio/tracing"]

# Standalone aggregation protocol. We use IPA infra for communication
# but it has nothing to do with IPA.
aggregate-circuit = []
# IPA protocol based on OPRF
ipa-prf = []

[dependencies]
ipa-macros = { version = "*", path = "../ipa-macros" }

aes = "0.8.3"
async-trait = "0.1.79"
async-scoped = { version = "0.9.0", features = ["use-tokio"], optional = true }
axum = { version = "0.5.17", optional = true, features = ["http2"] }
# The following is a temporary version until we can stabilize the build on a higher version
# of axum, rustls and the http stack.
axum-server = { git = "https://github.com/cberkhoff/axum-server/", branch = "rustls-0.23", version = "0.5.3", optional = true, features = [
    "tls-rustls",
] }
base64 = { version = "0.21.2", optional = true }
bitvec = "1.0"
bytes = "1.4"
clap = { version = "4.3.2", optional = true, features = ["derive"] }
comfy-table = { version = "7.0", optional = true }
config = "0.14"
console-subscriber = {  version = "0.2", optional = true }
criterion = { version = "0.5.1", optional = true, default-features = false, features = [
    "async_tokio",
    "plotters",
    "html_reports",
] }
curve25519-dalek = "4.1.1"
dashmap = "5.4"
delegate = "0.10.0"
dhat = "0.3.2"
embed-doc-image = "0.1.4"
futures = "0.3.28"
futures-util = "0.3.28"
generic-array = "1.0.0"
hex = { version = "0.4", features = ["serde"] }
hkdf = "0.12.3"
hpke = { version = "0.11.0", default-features = false, features = [
    "std",
    "x25519",
] }
hyper = { version = "0.14.28", optional = true, features = [
    "client",
    "h2",
    "stream",
    "runtime",
] }
# The following is a temporary version until we can stabilize the build on a higher version
# of axum, rustls and the http stack.
hyper-rustls = { git = "https://github.com/cberkhoff/hyper-rustls/", branch = "rustls-0.23", version = "0.25.1", optional = true, features = ["http2"] }
iai = { version = "0.1.1", optional = true }
metrics = "0.21.0"
metrics-tracing-context = "0.14.0"
metrics-util = { version = "0.15.0" }
once_cell = "1.18"
pin-project = "1.0"
rand = "0.8"
rand_core = "0.6"
rcgen = { version = "0.11.3", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.1.2", optional = true }
rustls-pki-types = "1.4.1"
# TODO consider using zerocopy or serde_bytes or in-house serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10"
shuttle-crate = { package = "shuttle", version = "0.6.1", optional = true }
thiserror = "1.0"
time = { version = "0.3", optional = true }
tokio = { version = "1.35", features = ["fs", "rt", "rt-multi-thread", "macros"] }
tokio-rustls = { version = "0.26", optional = true }
tokio-stream = "0.1.14"
toml = { version = "0.8", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4.0", optional = true, features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typenum = { version = "1.17", features = ["i128"] }
# hpke is pinned to it
x25519-dalek = "2.0.0-rc.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"

[build-dependencies]
cfg_aliases = "0.1.1"

[dev-dependencies]
command-fds = "0.2.2"
hex = "0.4"
permutation = "0.4.1"
proptest = "1.4"
rustls = { version = "0.23" }
tempfile = "3"

[lib]
path = "src/lib.rs"
bench = false

[[bin]]
name = "helper"
required-features = ["web-app", "real-world-infra"]
bench = false

[[bin]]
name = "ipa_bench"
path = "src/bin/ipa_bench/ipa_bench.rs"
required-features = ["cli"]
bench = false

[[bin]]
name = "report_collector"
required-features = ["cli", "test-fixture", "web-app"]
bench = false

[[bin]]
name = "test_mpc"
required-features = ["cli", "test-fixture", "web-app", "weak-field"]
bench = false

[[bench]]
name = "criterion_arithmetic"
path = "benches/ct/arithmetic_circuit.rs"
harness = false
required-features = ["enable-benches", "descriptive-gate"]

[[bench]]
name = "iai_arithmetic"
path = "benches/iai/arithmetic_circuit.rs"
harness = false
required-features = ["enable-benches", "descriptive-gate"]

[[bench]]
name = "oneshot_arithmetic"
path = "benches/oneshot/arithmetic_circuit.rs"
harness = false
required-features = ["enable-benches", "descriptive-gate"]

[[bench]]
name = "oneshot_ipa"
path = "benches/oneshot/ipa.rs"
harness = false
required-features = ["enable-benches", "descriptive-gate"]

[[bench]]
name = "transpose"
harness = false
required-features = ["enable-benches"]

[[test]]
name = "helper_networks"
required-features = [
    "cli",
    "web-app",
    "real-world-infra",
    "test-fixture",
    "descriptive-gate",
]

[[test]]
name = "compact_gate"
required-features = [
    "cli",
    "web-app",
    "real-world-infra",
    "test-fixture",
    "compact-gate",
]
