[package]
name = "ipa-core"
version = "0.1.0"
# When updating the rust version:
# 1. Check at https://hub.docker.com/_/rust that the relevant version of the
#    rust:slim-bullseye docker image is available.
# 2. Update the rust version used for draft in
#    https://github.com/private-attribution/draft/blob/main/sidecar/ansible/provision.yaml.
rust-version = "1.82.0"
edition = "2021"
build = "build.rs"

[features]
default = [
    "web-app",
    "in-memory-infra",
    # by default remove all TRACE, DEBUG spans from release builds
    "tracing/max_level_trace",
    "tracing/release_max_level_info",
    "stall-detection",
    "descriptive-gate",
]
cli = ["comfy-table", "clap", "num_cpus"]
# Enable compact gate optimization
compact-gate = []
# mutually exclusive with compact-gate and disables compact gate optimization.
# It is enabled by default
descriptive-gate = ["ipa-step/string-step"]
disable-metrics = []
# TODO move web-app to a separate crate. It adds a lot of build time to people who mostly write protocols
# TODO Consider moving out benches as well
web-app = [
    "axum",
    "axum-server",
    "base64",
    "clap",
    "comfy-table",
    "hyper",
    "hyper-rustls",
    "rcgen",
    "rustls",
    "rustls-pemfile",
    "time",
    "tiny_http",
    "tokio-rustls",
    "toml",
    "tower",
    "tower-http",
    "hyper-util",
    "http-body",
    "http-body-util",
]
test-fixture = ["weak-field", "ipa-metrics-tracing", "ipa-metrics/partitions"]
# Include observability instruments that detect lack of progress inside MPC. If there is a bug that leads to helper
# miscommunication, this feature helps to detect it. Turning it on has some cost.
# If "shuttle" feature is enabled, turning this on has no effect.
stall-detection = []
shuttle = ["shuttle-crate", "test-fixture"]
debug-trace = ["tracing/max_level_trace", "tracing/release_max_level_debug"]
# TODO: we may want to use in-memory-bench and real-world-bench some time after
enable-benches = ["cli", "in-memory-infra", "test-fixture", "criterion", "iai"]
# The following two features are mutually exclusive. In-memory should be enabled by default as the vast majority
# of unit tests use it. Real world infra uses HTTP implementation and is suitable for integration/e2e tests
in-memory-infra = []
real-world-infra = []
# Force use of jemalloc on non-Linux platforms. jemalloc is used by default on Linux.
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
dhat-heap = ["cli", "dhat", "test-fixture"]
# Enable this feature to enable our colossally weak Fp31.
weak-field = []
# Enable using more than one thread for protocol execution. Most of the parallelism occurs at parallel/seq_join operations
multi-threading = ["async-scoped"]
# Enable tokio task profiling. Requires tokio_unstable flag to be passed to the compiler.
# RUSTFLAGS="--cfg tokio_unstable" cargo run ... --features="tokio-console ...".
# Note that if there are other flags enabled on your platform in .cargo/config.toml, you need to include them as well.
tokio-console = ["console-subscriber", "tokio/tracing"]
# relaxed DP, off by default
relaxed-dp = []

[dependencies]
ipa-metrics = { path = "../ipa-metrics" }
ipa-metrics-tracing = { optional = true, path = "../ipa-metrics-tracing" }
ipa-step = { version = "*", path = "../ipa-step" }
ipa-step-derive = { version = "*", path = "../ipa-step-derive" }

aes = "0.8.3"
async-trait = "0.1.79"
async-scoped = { version = "0.9.0", features = ["use-tokio"], optional = true }
axum = { version = "0.7.5", optional = true, features = ["http2", "macros"] }
# The following is a temporary version until we can stabilize the build on a higher version
# of axum, rustls and the http stack.
axum-server = { version = "0.7.1", optional = true, features = ["tls-rustls"] }
base64 = { version = "0.21.2", optional = true }
bitvec = "1.0"
bytes = "1.4"
clap = { version = "4.3.2", optional = true, features = ["derive"] }
comfy-table = { version = "7.0", optional = true }
config = "0.14"
console-subscriber = {  version = "0.4", optional = true }
criterion = { version = "0.5.1", optional = true, default-features = false, features = [
    "async_tokio",
    "plotters",
    "html_reports",
] }
curve25519-dalek = "4.1.1"
dashmap = "5.4"
delegate = "0.10.0"
dhat = { version = "0.3.2", optional = true }
embed-doc-image = "0.1.4"
futures = "0.3.28"
futures-util = "0.3.28"
generic-array = "1.0.0"
hex = { version = "0.4", features = ["serde"] }
hkdf = "0.12.3"
hpke = { version = "0.11.0", default-features = false, features = [
    "std",
    "x25519",
] }
hyper = { version = "1.3.1", optional = true, features = [ "http2", "server" ] }
hyper-rustls = { version = "0.27.1", optional = true, features = ["http2"] }
hyper-util = { version = "0.1.3", optional = true, features = ["http2"] }
http-body-util = { version = "0.1.1", optional = true }
http-body = { version = "1", optional = true }
iai = { version = "0.1.1", optional = true }
num_cpus = {  version = "1.0", optional = true }
once_cell = "1.18"
pin-project = "1.0"
rand = "0.8"
rand_core = "0.6"
rcgen = { version = "0.11.3", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.1.2", optional = true }
rustls-pki-types = "1.4.1"
# TODO consider using zerocopy or serde_bytes or in-house serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shuttle-crate = { package = "shuttle", version = "0.6.1", optional = true }
subtle = "2.6"
thiserror = "1.0"
tikv-jemallocator = { version = "0.6", optional = true, features = ["profiling"] }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"] }
time = { version = "0.3", optional = true }
tiny_http = { version = "0.12", optional = true }
tokio = { version = "1.42", features = ["fs", "rt", "rt-multi-thread", "macros"] }
tokio-rustls = { version = "0.26", optional = true }
tokio-stream = "0.1.14"
toml = { version = "0.8", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typenum = { version = "1.17", features = ["i128"] }
# hpke is pinned to it
x25519-dalek = "2.0.0-rc.3"

[target.'cfg(all(not(target_env = "msvc"), not(target_os = "macos")))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

[build-dependencies]
cfg_aliases = "0.1.1"
ipa-step = { version = "*", path = "../ipa-step", features = ["build"] }
ipa-step-derive = { version = "*", path = "../ipa-step-derive", features = ["build"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
command-fds = "0.2.2"
hex = "0.4"
ipa-step = { version = "*", path = "../ipa-step", features = ["build", "string-step"] }
permutation = "0.4.1"
proptest = "1.4"
rustls = { version = "0.23" }
tempfile = "3"
ipa-metrics-tracing = { path = "../ipa-metrics-tracing" }
ipa-metrics = { path = "../ipa-metrics", features = ["partitions"] }

[lib]
path = "src/lib.rs"
bench = false

[[bin]]
name = "helper"
required-features = ["web-app", "real-world-infra"]
bench = false

[[bin]]
name = "ipa_bench"
path = "src/bin/ipa_bench/ipa_bench.rs"
required-features = ["cli"]
bench = false

[[bin]]
name = "report_collector"
required-features = ["cli", "test-fixture", "web-app"]
bench = false

[[bin]]
name = "test_mpc"
required-features = ["cli", "test-fixture", "web-app", "weak-field"]
bench = false

[[bin]]
name = "crypto_util"
required-features = ["cli", "test-fixture", "web-app"]
bench = false

[[bin]]
name = "in_the_clear"
required-features = ["cli", "test-fixture", "web-app"]
bench = false

[[bench]]
name = "criterion_arithmetic"
path = "benches/ct/arithmetic_circuit.rs"
harness = false
required-features = ["enable-benches"]

[[bench]]
name = "criterion_prss"
path = "benches/ct/prss.rs"
harness = false
required-features = ["enable-benches"]

[[bench]]
name = "iai_arithmetic"
path = "benches/iai/arithmetic_circuit.rs"
harness = false
required-features = ["enable-benches"]

[[bench]]
name = "oneshot_arithmetic"
path = "benches/oneshot/arithmetic_circuit.rs"
harness = false
required-features = ["enable-benches"]

[[bench]]
name = "oneshot_ipa"
path = "benches/oneshot/ipa.rs"
harness = false
required-features = ["enable-benches"]

[[bench]]
name = "transpose"
harness = false
required-features = ["enable-benches"]

[[bench]]
name = "dzkp"
path = "benches/ct/dzkp.rs"
harness = false
required-features = ["enable-benches"]

[[test]]
name = "helper_networks"
required-features = [
    "cli",
    "web-app",
    "real-world-infra",
    "test-fixture",
]

[[test]]
name = "compact_gate"
required-features = [
    "cli",
    "compact-gate",
    "web-app",
    "real-world-infra",
    "test-fixture",
]

[[test]]
name = "ipa_with_relaxed_dp"
required-features = [
    "cli",
    "compact-gate",
    "web-app",
    "real-world-infra",
    "test-fixture",
    "relaxed-dp",
]

[[test]]
name = "hybrid"
required-features = [
    "cli",
    "compact-gate",
    "web-app",
    "real-world-infra",
    "test-fixture",
    "relaxed-dp",
]
