[package]
name = "ipa-metrics"
version = "0.1.0"
edition = "2021"

[features]
default = []
# support metric partitioning
partitions = []

[dependencies]
# crossbeam channels are faster than std
crossbeam-channel = "0.5"
# This crate uses raw entry API that is unstable in stdlib
hashbrown = "0.15"
# Fast non-collision-resistant hashing
rustc-hash = "2.0.0"
# logging
tracing = "0.1"
