[package]
name = "ipa-step-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
build = []

[dependencies]
proc-macro2 = "1"
quote = "1.0.36"
syn = { version = "2.0.61", features = ["full", "extra-traits"] }
ipa-step = { version = "*", path = "../ipa-step", features = ["name"] }

[dev-dependencies]
prettyplease = "0.2"