[package]
name = "ipa-step"
version = "0.1.0"
edition = "2024"

[features]
# This is used for build.rs scripts.
build = ["name", "prettyplease", "proc-macro2", "quote", "syn"]
name = []
string-step = []

[dependencies]
ipa-metrics = { path = "../ipa-metrics" }

prettyplease = { version = "0.2", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1.0.36", optional = true }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0.61", optional = true, features = ["full", "extra-traits"] }
