[package]
name = "raw-ipa-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug"]
debug = ["hex"]
enable-serde = ["serde", "serde_json", "rust-elgamal/enable-serde"]

[dependencies]
hex = {version = "0.4", optional = true}
rand_core = "0.6"
rand = "0.8"
rust-elgamal = "0.4"
serde = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
# rust-elgamal (via curve25519-dalek-ng) only works with 0.9, not 0.10
sha2 = "0.9"
digest = "0.9"

[dev-dependencies]
